--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,16 @@ langchain-openai==0.3.18
 pydantic==2.11.5
 langchain-groq==0.3.2
 langchain-huggingface==0.2.0
+langchain-community==0.3.24
+beautifulsoup4
+unstructured
+langchain-unstructured
+pypdf
+wikipedia
+langchain-chroma==0.2.4
+langchain-faiss
+faiss-cpu==1.11.0
+langserve[all]==0.3.1
+fastapi[standard]
+langgraph
+langchain-tavily
